# flame

./: .gitignore  CMakeLists.txt  build.sh  compile_commands.json  run.sh
include/: callback.hh  convert.hh  flame.hh  gym.hh  simulation.hh  tensorboard.hh  unit.hh
include/agent/: policy_gradient.hh  random.hh
include/gym/: gym.hh
include/gym/wrappers/: stack_history.hh
lib/: pybind11
src/: callback.cc  convert.cc  flame.cc  gym.cc  main.cc  simulation.cc  tensorboard.cc
src/agent/: policy_gradient.cc  random.cc
src/gym/: gym.cc
